Responsive grid layout

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,22 @@
 <html>
-    <head></head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Inovia Team - Give Me Time</title>
+    <meta name="description" content="R&D time exchange collaborative platform">
+
+    <!-- Use minimum-scale=1 to enable GPU rasterization -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="/images/favicon.ico">
+    <script type="text/javascript" src="css.bundle.js"></script>
+  </head>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+    </head>
     <body style="margin:0">
         <div id="main" />
     </body>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="js.bundle.js"></script>
 </html>
