--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="shortcut icon" href="/images/favicon.ico">
   </head>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
-    </head>
     <body style="margin:0">
         <div id="main" />
+        <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
